--- a/PaymentChallenge/appsettings.json
+++ b/PaymentChallenge/appsettings.json
@@ -8,5 +8,28 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+      //{
+      // Install SeqNugget to use this
+      //  "Name": "Seq",
+      //  "Args": { "serverUrl":  "http://localhost:5341"}
+      //}
+    ]
+  },
   "AllowedHosts": "*"
 }
